# 2025-2026-autumn

Gauss_inverse/: CMakeLists.txt  main.cpp
Gauss_inverse/init/: CMakeLists.txt  matrix.h
Gauss_inverse/solver/: CMakeLists.txt  gauss_inverse.cpp  gauss_inverse.h
Gauss_inverse_2/: CMakeLists.txt  main.cpp  matrix.txt  matrix_deg.txt
Gauss_inverse_2/init/: matrix.cpp
Gauss_inverse_2/print/: CMakeLists.txt  print.cpp  print.h
Gauss_inverse_2/solver/: gauss_inverse.cpp  gauss_inverse.h
